# competitive

./: .gitignore  .pre-commit-config.yaml  README.md  bsearch.py  combination.py  primes.py  pyproject.toml  unionfind.py  util.py
166/: F.py
167/: D.py  E.py
GC044/: A.py
main/: BIT.py  combination.py  factorial.py  powfac.py  primes.py  unionfind.py
python/: cspell.yaml  mypy.ini  pyproject.toml
python/competitive/: combination.py  tree.py
python/main/: BIT.py  bsearch.py  combination.py  factorial.py  tree.py  unionfind.py
python/src/: BIT.py  __init__.py  bsearch.py  combination.py  factorial.py  primes.py  tree.py  unionfind.py
python/tests/: BIT_test.py  bsearch_test.py  combination_test.py  factorial_test.py  primes_test.py  test_BIT.py  test_bsearch.py  test_combination.py  test_factorial.py  test_primes.py  test_tree.py  test_unionfind.py  tree__test.py  tree_test.py  unionfind_test.py
tests/: combination_test.py  factorial_test.py  test_unionfind.py
