[project]
name = "competitive_python"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "kokardy", email = "mgc1028@gmail.com" }]
dependencies = [
    "numpy>=2.1.2",
    "ruff>=0.8.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "mypy>=1.12.0",
  "ruff>=0.7.0",
  "isort>=5.13.2",
  "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python"]

[tool.ruff]
line-length = 120
lint.select = ["F", "E", "W", "D"]
lint.ignore = [
  "D400", # docstring first line must end with period
  "D415", # docstring first line must end with period, ? , !
  "D203", # 1 blank line required before class docstring
  "D211", # no blank line before section
  "D212", # no blank line after section
]

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.mypy]
# plugins = ["sqlalchemy.ext.mypy.plugin",]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["pytest.*"]
disallow_untyped_defs = false
follow_imports = "silent"
ignore_missing_imports = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"

[tool.pyright]
reportGeneralTypeIssues = false
extraPaths = ["src", ".venv/lib/python3.12/site-packages"]
pythonVersion = "3.12"
